[gd_scene load_steps=8 format=2]

[ext_resource path="res://Drawing.gd" type="Script" id=1]
[ext_resource path="res://CanvasPos.gd" type="Script" id=2]
[ext_resource path="res://templates/creator_head_template.png" type="Texture" id=3]
[ext_resource path="res://Template.gd" type="Script" id=4]
[ext_resource path="res://ColorPicker.gd" type="Script" id=5]
[ext_resource path="res://assets/theme_main.tres" type="Theme" id=6]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Test3" type="Node2D"]

[node name="Template" type="Sprite" parent="."]
visible = false
modulate = Color( 0.705882, 0.705882, 0.705882, 1 )
material = SubResource( 1 )
position = Vector2( 480, 336 )
z_index = 21
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 240.0
margin_top = 96.0
margin_right = 720.0
margin_bottom = 576.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 480, 480 )
transparent_bg = true
handle_input_locally = false
usage = 1
render_target_update_mode = 3
shadow_atlas_quad_0 = 0
shadow_atlas_quad_1 = 0
shadow_atlas_quad_2 = 0
shadow_atlas_quad_3 = 0

[node name="Drawing" type="Node2D" parent="ViewportContainer/Viewport"]
script = ExtResource( 1 )

[node name="CanvasPos" type="Node2D" parent="."]
z_index = -21
script = ExtResource( 2 )

[node name="Canvas" type="ColorRect" parent="CanvasPos"]
margin_left = 240.0
margin_top = 96.0
margin_right = 720.0
margin_bottom = 576.0
mouse_filter = 1
color = Color( 0.694118, 0.682353, 0.65098, 1 )

[node name="Save" type="Button" parent="."]
margin_left = 672.0
margin_top = 600.0
margin_right = 720.0
margin_bottom = 624.0
focus_mode = 0
theme = ExtResource( 6 )
text = "Save"

[node name="Clear" type="Button" parent="."]
margin_left = 312.0
margin_top = 600.0
margin_right = 360.0
margin_bottom = 624.0
focus_mode = 0
theme = ExtResource( 6 )
text = "Clear"

[node name="Chaos" type="Button" parent="."]
margin_left = 240.0
margin_top = 600.0
margin_right = 288.0
margin_bottom = 624.0
focus_mode = 0
theme = ExtResource( 6 )
text = "Chaos"

[node name="ShowTemplate" type="Button" parent="."]
margin_left = 552.0
margin_top = 600.0
margin_right = 648.0
margin_bottom = 624.0
focus_mode = 0
theme = ExtResource( 6 )
toggle_mode = true
text = "Show Template"

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 768.0
margin_top = 96.0001
margin_right = 1488.0
margin_bottom = 816.0
rect_scale = Vector2( 0.4, 0.4 )
rect_clip_content = true

[node name="ColorPicker" type="ColorPicker" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 713.0
margin_bottom = 713.0
edit_alpha = false
presets_enabled = false
presets_visible = false
script = ExtResource( 5 )

[node name="Background" type="Node2D" parent="."]
z_index = -42

[node name="BGSolidColor" type="ColorRect" parent="Background"]
margin_left = -24.0
margin_top = -24.0
margin_right = 1296.0
margin_bottom = 744.0
mouse_filter = 2
color = Color( 0.0980392, 0.0941176, 0.14902, 1 )

[node name="ColorBoxContainer" type="PanelContainer" parent="."]
margin_left = 768.0
margin_top = 408.0
margin_right = 888.0
margin_bottom = 528.0
rect_scale = Vector2( 0.4, 0.4 )

[node name="CurrentColor" type="ColorRect" parent="ColorBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 113.0
margin_bottom = 113.0
color = Color( 0, 0, 0, 1 )

[node name="BottomText" type="Label" parent="."]
margin_left = 1224.0
margin_top = 696.0
margin_right = 1272.0
margin_bottom = 720.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 0.254902 )
text = "smolpixl"
autowrap = true
clip_text = true

[node name="Guide" type="Label" parent="."]
margin_left = 768.0
margin_top = 480.0
margin_right = 864.0
margin_bottom = 576.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 0.560784 )
text = "LMB: Draw
RMB: Erase
MMB: Dropper
Ctrl+Z: Undo"
valign = 2
autowrap = true
clip_text = true

[connection signal="mouse_entered" from="CanvasPos/Canvas" to="ViewportContainer/Viewport/Drawing" method="_on_Canvas_mouse_entered"]
[connection signal="pressed" from="Save" to="ViewportContainer/Viewport/Drawing" method="_on_Save_pressed"]
[connection signal="pressed" from="Clear" to="ViewportContainer/Viewport/Drawing" method="_on_Clear_pressed"]
[connection signal="pressed" from="Chaos" to="ViewportContainer/Viewport/Drawing" method="_on_Chaos_pressed"]
[connection signal="toggled" from="ShowTemplate" to="Template" method="_on_ShowTemplate_toggled"]
[connection signal="color_changed" from="PanelContainer/ColorPicker" to="ViewportContainer/Viewport/Drawing" method="_on_ColorPicker_color_changed"]
[connection signal="mouse_entered" from="PanelContainer/ColorPicker" to="ViewportContainer/Viewport/Drawing" method="_on_ColorPicker_mouse_entered"]
